--- a/wk1/js-crypto-playground/package.json
+++ b/wk1/js-crypto-playground/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "bitcoinjs-lib": "^5.2.0",
     "crypto-js": "^4.1.1",
+    "ethers": "^5.6.9",
     "hyperbeam": "^2.0.1",
     "prompt-sync": "^4.2.0"
   }
